<resources>
    <string name="app_name">CalorieCalculator</string>
    <string name="title_activity_maps">Map</string>
    <string name="find_your_location">Find your location</string>
    <string name="mapbox_access_token">pk.eyJ1IjoicXViaXRzMiIsImEiOiJja2hxcXZrbHAwMnllMnJsaG1idDEyc2oxIn0.1P5d5vuoQJQKnabiNPoScA</string>
    <string name="driving_profile">Driving</string>
    <string name="walking_profile">Walking</string>
    <string name="cycling_profile">Cycling</string>
    <string name="instruction">Instruction</string>
    <string name="basla">Başla</string>
    <string name="yaktiginiz_kalori">Yaktığınız Kalori:</string>
    <string name="kalan_yol">Kalan Yol:</string>
    <string name="ortalama_hiz">Ortalama Hız:</string>
    <string name="_0_kalori">0 kalori</string>
    <string name="_0_metre">0 metre</string>
    <string name="_0_m_s">0 m/s</string>
    <string name="profile">profile</string>
    <string name="merhaba">Merhaba</string>
    <string name="kilonuz">Kilonuz:</string>
    <string name="cinsiyetiniz">Cinsiyetiniz:</string>
    <string name="boyunuz">Boyunuz:</string>
    <string name="todo">TODO</string>
    <string name="adinizi_giriniz">Adınızı Giriniz</string>
    <string name="kadin">Kadın</string>
    <string name="erkek">Erkek</string>
    <string name="cinsiyet">Cinsiyet:</string>
    <string name="kilonuzu_giriniz">Kilonuzu Giriniz</string>
    <string name="boyunuzu_giriniz">Boyunuzu Giriniz</string>
    <string name="soyadinizi_giriniz">Soyadınızı Giriniz</string>
    <string name="onayla">Onayla</string>
    <string name="gunluk_yaktiginiz_kalori">Günlük yaktığınız kalori:</string>
    <string name="image">TODO</string>
</resources>