<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="30dp"
    tools:context=".FirstActivity">


    <ImageView
        android:id="@+id/mainimg"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_marginVertical="10dp"
        android:scaleType="fitCenter"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/image" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/purple_700">

        <EditText
            android:id="@+id/nameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:ems="10"
            android:hint="@string/adinizi_giriniz"
            android:inputType="text|textNoSuggestions"
            android:maxLength="12"
            android:text=""
            android:textSize="20sp"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="#0a1122">
    <EditText
        android:id="@+id/surnameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="abcçdefgğhıijklmnoöpqrsştuüvwxyzABCÇDEFGĞHIİJKLMNOÖPQRSŞTUÜVWXYZ"
        android:ems="10"
        android:hint="@string/soyadinizi_giriniz"
        android:inputType="text"
        android:maxLength="12"

        android:textSize="18sp"
        android:autofillHints="" />
</com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="#0a1122">

        <EditText
            android:id="@+id/heightLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/boyunuzu_giriniz"
            android:inputType="number"
            android:maxLength="3"
            android:textSize="18sp"
            android:importantForAutofill="no" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="#0a1122">

        <EditText
            android:id="@+id/weightLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/kilonuzu_giriniz"
            android:inputType="number"
            android:maxLength="3"
            android:textSize="18sp"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cinsiyet"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/erkekRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/erkek"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/kadinRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/kadin"
            android:textSize="20sp" />


    </RadioGroup>

    <Button
        android:id="@+id/buton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginVertical="30dp"
        android:background="@drawable/button_rounded"
        android:onClick="onayla"
        android:text="@string/onayla"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />






</LinearLayout>

</ScrollView>
